添加了脚部样式

--- a/index.html
+++ b/index.html
@@ -151,17 +151,21 @@
 		</section>
 
 		<!-- 页脚的联系方式 -->
-		<section id="copyright" class="dark_section">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12">
-						<img id='img-logo' src="static/picture/title-logo.png" >
-						<p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-						<p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
+		<footer>
+			<section id="copyright" class="dark_section">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12">
+							<img id='img-logo' src="static/picture/title-logo.png" >
+							<p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+							<p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
+						</div>
 					</div>
 				</div>
-			</div>
-		</section>
+			</section>
+		</footer>
+		<!-- 空白占位 -->
+		<div class="blank"></div>
 
 	</div>
 
