--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
 	<title>合成生物学竞赛——关注合成生物学创新及应用</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+	
 	<link rel="stylesheet" href="static/css/bootstrap.css">
 	<link rel="stylesheet" href="static/css/animations.css">
 	<link rel="stylesheet" href="static/css/main.css">
 	<link rel="stylesheet" type="text/css" href="static/css/index.css"/>
 	<link rel="stylesheet" type="text/css" href="static/css/all.css"/>
+	<script src="static/js/all.js"></script>
 	<script src="static/js/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
 
 	<!-- 页头 -->
-	<section id="header">
+	<section id="header" class="preheader">
 		<div class="container">
 			<div class="row">
 				<a href="https://www.synbiohive.com/"><img class="navbar-brand logo" src="static/picture/synbiohive.svg"
 						alt=""></a>
-				<img class="navbar-brand logo logo-left" src="static/picture/logo.png" alt="">
+				<img  id="logo1" class="navbar-brand logo logo-left" src="static/picture/logo.png" alt="">
 				<div class="col-sm-12 mainmenu_wrap">
 					<div class="main-menu-icon visible-xs"><span></span><span></span><span></span></div>
 					<ul id="mainmenu" class="nav menu sf-menu responsive-menu superfish">
@@ -99,7 +100,7 @@
 				</div>
 				<div class="col-sm-6 block">
 					<p class="description">
-						项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍
+						更新了页脚，更新了页头。项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍
 					</p>
 				</div>
 			</div>
