--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
 	<div id="box_wrap">
 		<img width="100%" src="static/picture/img-btt.png" alt="">
+		<h2 style="text-align: center;">更新了页脚，页头正在更新...</h2>
 
 		<section id="middle" class="">
 			<!-- 第一部分的图片和右侧的文字 -->
