--- a/Protocol.html
+++ b/Protocol.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="static/css/bootstrap.css">
         <link rel="stylesheet" href="static/css/animations.css">
         <link rel="stylesheet" href="static/css/main.css">
+		<link rel="stylesheet" type="text/css" href="static/css/index.css"/>
+		<link rel="stylesheet" type="text/css" href="static/css/all.css"/>
+		<script src="static/js/all.js"></script>
         <script src="static/js/modernizr-2.6.2.min.js"></script>
     </head>
     <style type="text/css">
