所有页面添加样式和js文件

--- a/Background.html
+++ b/Background.html
@@ -11,7 +11,6 @@
         <link rel="stylesheet" href="static/css/bootstrap.css">
         <link rel="stylesheet" href="static/css/animations.css">
         <link rel="stylesheet" href="static/css/main.css">
-		<link rel="stylesheet" type="text/css" href="static/css/index.css"/>
 		<link rel="stylesheet" type="text/css" href="static/css/all.css"/>
 		<script src="static/js/all.js"></script>
         <script src="static/js/modernizr-2.6.2.min.js"></script>
@@ -113,14 +112,22 @@
 </section>
 
 
-<section id="copyright" class="dark_section">
-  <div class="container"><div class="row">
-    <div class="col-sm-12">
-     <p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-      <p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
-    </div>
-  </div></div>
-</section>
+<!-- 页脚的联系方式 -->
+		<footer>
+			<section id="copyright" class="dark_section">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12">
+							<img id='img-logo' src="static/picture/title-logo.png" >
+							<p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+							<p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		</footer>
+		<!-- 空白占位 -->
+		<div class="blank"></div>
 
 </div>
 
