--- a/Design.html
+++ b/Design.html
@@ -109,14 +109,21 @@
 </section>
 
 
-<section id="copyright" class="dark_section">
-  <div class="container"><div class="row">
-    <div class="col-sm-12">
-     <p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-      <p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
-    </div>
-  </div></div>
-</section>
+<footer>
+			<section id="copyright" class="dark_section">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12">
+							<img id='img-logo' src="static/picture/title-logo.png" >
+							<p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+							<p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		</footer>
+		<!-- 空白占位 -->
+		<div class="blank"></div>
 
 </div>
 
