--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<title>合成生物学竞赛——关注合成生物学创新及应用</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+
 	<link rel="stylesheet" href="static/css/bootstrap.css">
 	<link rel="stylesheet" href="static/css/animations.css">
 	<link rel="stylesheet" href="static/css/main.css">
-	<link rel="stylesheet" type="text/css" href="static/css/index.css"/>
-	<link rel="stylesheet" type="text/css" href="static/css/all.css"/>
+	<link rel="stylesheet" type="text/css" href="static/css/index.css" />
+	<link rel="stylesheet" type="text/css" href="static/css/all.css" />
 	<script src="static/js/all.js"></script>
 	<script src="static/js/modernizr-2.6.2.min.js"></script>
 </head>
@@ -24,7 +24,7 @@
 			<div class="row">
 				<a href="https://www.synbiohive.com/"><img class="navbar-brand logo" src="static/picture/synbiohive.svg"
 						alt=""></a>
-				<img  id="logo1" class="navbar-brand logo logo-left" src="static/picture/logo.png" alt="">
+				<img id="logo1" class="navbar-brand logo logo-left" src="static/picture/logo.png" alt="">
 				<div class="col-sm-12 mainmenu_wrap">
 					<div class="main-menu-icon visible-xs"><span></span><span></span><span></span></div>
 					<ul id="mainmenu" class="nav menu sf-menu responsive-menu superfish">
@@ -91,66 +91,73 @@
 		<img width="100%" src="static/picture/img-btt.png" alt="">
 		<h2 style="text-align: center;">更新了页脚，页头正在更新...</h2>
 
-		<section id="middle" class="">
-			<!-- 第一部分的图片和右侧的文字 -->
-			<div class="container">
-				<div class="col-sm-6">
-					<div class="item active">
-						<img src="static/picture/img-xt.png" alt="image">
+		<div class="Pmiddle">
+			<section id="middle" class="">
+
+				<!-- 第一部分的图片和右侧的文字 -->
+				<div class="container">
+					<div class="col-sm-6">
+						<div class="item active">
+							<img src="static/picture/img-xt.png" alt="image">
+						</div>
+					</div>
+					<div class="col-sm-6 block">
+						<p class="description">
+							更新了页脚，更新了页头。项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍
+						</p>
 					</div>
 				</div>
-				<div class="col-sm-6 block">
-					<p class="description">
-						更新了页脚，更新了页头。项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍项目简要介绍
-					</p>
-				</div>
-			</div>
-			<!-- 空白占位 -->
-			<div class="blank"></div>
-			<!-- 第二部分 -->
-			<div class="container">
-				<div class="col-sm-6">
-					<div class="item active">
-						<img src="static/picture/img-xt.png" alt="image">
+				<!-- 空白占位 -->
+				<div class="blank"></div>
+				<!-- 第二部分 -->
+				<div class="container">
+					<div class="col-sm-6">
+						<div class="item active">
+							<img src="static/picture/img-xt.png" alt="image">
+						</div>
+					</div>
+					<div class="col-sm-6 block">
+						<p class="description">
+							模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍
+						</p>
 					</div>
 				</div>
-				<div class="col-sm-6 block">
-					<p class="description">
-						模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍模型简要介绍
-					</p>
-				</div>
-			</div>
-			<!-- 空白占位 -->
-			<div class="blank"></div>
-			<!-- 第三部分 -->
-			<div class="container">
-				<div class="col-sm-6">
-					<div class="item active">
-						<img src="static/picture/img-xt.png" alt="image">
+				<!-- 空白占位 -->
+				<div class="blank"></div>
+				<!-- 第三部分 -->
+				<div class="container">
+					<div class="col-sm-6">
+						<div class="item active">
+							<img src="static/picture/img-xt.png" alt="image">
+						</div>
+					</div>
+					<div class="col-sm-6 block">
+						<p class="description">
+							补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍
+						</p>
 					</div>
 				</div>
-				<div class="col-sm-6 block">
-					<p class="description">
-						补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍补充部分简要介绍
-					</p>
+		</div>
+
+		<!-- 空白占位 -->
+		<div class="blank"></div>
+		<!-- 第四部分 -->
+		<div class="container">
+			<div class="col-sm-6">
+				<div class="item active">
+					<img src="static/picture/img-xt.png" alt="image">
 				</div>
 			</div>
-			<!-- 空白占位 -->
-			<div class="blank"></div>
-			<!-- 第四部分 -->
-			<div class="container">
-				<div class="col-sm-6">
-					<div class="item active">
-						<img src="static/picture/img-xt.png" alt="image">
-					</div>
-				</div>
-				<div class="col-sm-6 block">
-					<p class="description">
-						团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要
-					</p>
-				</div>
+			<div class="col-sm-6 block">
+				<p class="description">
+					团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要介绍团队简要
+				</p>
 			</div>
-		</section>
+
+			</section>
+		</div>
+		<!-- 空白占位 -->
+		<div class="blank"></div>
 
 		<!-- 页脚的联系方式 -->
 		<footer>
@@ -158,7 +165,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12">
-							<img id='img-logo' src="static/picture/title-logo.png" >
+							<img id='img-logo' src="static/picture/title-logo.png">
 							<p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
 							<p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
 						</div>
