--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="header-wrapper d-flex align-items-center justify-content-between">
 					<!--header-logo-->
 					<div class="header-logo">
-						<a href="index.html">团队名称</a>
+						<a href="index.html">合成生物学竞赛</a>
 					</div>
 					<!-- menu-bar -->
 					<div class="menu-bar">
