--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>团队名称</title>
+		<title>首页</title>
 		<link rel="icon" href="assets/img/favicon.ico" type="image/gif" sizes="16x16">
 		<link rel="stylesheet" href="assets/css/base-style.css">
 		<link rel="stylesheet" href="assets/css/style.css">
@@ -144,7 +144,7 @@
 						<div class="banner-img-area">
 							<h4>文本21</h4>
 							<div class="banner-img">
-								<img src="assets/img/homepage/banner-image.jpg" alt="">
+								<img src="assets/img/homepage/001.jpg" alt="">
 							</div>
 						</div>
 						<div class="banner-content-area">
