--- a/Design.html
+++ b/Design.html
@@ -188,13 +188,13 @@
 							<img src="assets/img/Bio_img/design1.png" style="width: 50%;">
 							<img src="assets/img/Bio_img/design2.png" style="width: 50%;">
 							<h4>2.表达并纯化CL7-Taq酶</h4>
-							<p class="title-content">a.将表达质粒转化至大肠杆菌感受态细胞中，用卡那霉素进行筛选，并用IPTG诱导酶的表达；b.破碎菌体细胞，利用镍柱可与His标签结合的特性纯化蛋白质，通过SDS-PAGE 电泳检测酶的纯度；c.通过酶标仪检测OD值，代入蛋白质浓度曲线来测定酶的浓度；d通过检测酶扩增速率来测定酶的活性。
+							<p>a.将表达质粒转化至大肠杆菌感受态细胞中，用卡那霉素进行筛选，并用IPTG诱导酶的表达；b.破碎菌体细胞，利用镍柱可与His标签结合的特性纯化蛋白质，通过SDS-PAGE 电泳检测酶的纯度；c.通过酶标仪检测OD值，代入蛋白质浓度曲线来测定酶的浓度；d通过检测酶扩增速率来测定酶的活性。
 							</p>
 							<img src="assets/img/Bio_img/design3.png" style="width: 50%;">
 							<h4>3.确立CL7-Taq酶PCR反应体系</h4>
-							<p class="title-content">a.设计0-9mM的MgCl2，10-100mMKCl，10-80mM的(NH4)2SO4及pH值7.0-9.0的反应缓冲液，测定Taq酶与Cl7-Taq酶的酶活；b.用EvaEZ荧光聚合酶活性测定试剂盒绘制Taq酶的酶活标准曲线；c.通过qPCR的单链延伸反应检测酶上荧光信号；d.带入公式计算出对应酶活，分析数据确定最佳PCR反应体系。</p>
+							<p>a.设计0-9mM的MgCl2，10-100mMKCl，10-80mM的(NH4)2SO4及pH值7.0-9.0的反应缓冲液，测定Taq酶与Cl7-Taq酶的酶活；b.用EvaEZ荧光聚合酶活性测定试剂盒绘制Taq酶的酶活标准曲线；c.通过qPCR的单链延伸反应检测酶上荧光信号；d.带入公式计算出对应酶活，分析数据确定最佳PCR反应体系。</p>
 							<h4>4.检测CL7-Taq酶的酶学性质</h4>
-							<p class="title-content">a.通过检测加热不同时间，1U/μL的酶扩增的酶活得到酶的热稳定性；b.通过相同时间，1U/μL的酶扩增不同大小的片段所得产物量检测酶的扩增速率；c.通过扩增不同浓度梯度模板检测酶对模板的敏感度；d.通过检测酶对于不同酶抑制剂的催化活性确定酶对抑制剂的耐受性。</p>
+							<p>a.通过检测加热不同时间，1U/μL的酶扩增的酶活得到酶的热稳定性；b.通过相同时间，1U/μL的酶扩增不同大小的片段所得产物量检测酶的扩增速率；c.通过扩增不同浓度梯度模板检测酶对模板的敏感度；d.通过检测酶对于不同酶抑制剂的催化活性确定酶对抑制剂的耐受性。</p>
 							
 							<h2>二、技术路线</h2>
 							<img src="assets/img/Bio_img/design4.png" style="width: 60%; margin-top: 30px;">
