页面文字细节

--- a/Design.html
+++ b/Design.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>团队名称</title>
+		<title>设计 Design</title>
 		<link rel="icon" href="assets/img/favicon.ico" type="image/gif" sizes="16x16">
 		<link rel="stylesheet" href="assets/css/base-style.css">
 		<link rel="stylesheet" href="assets/css/style.css">
@@ -23,7 +23,7 @@
 				<div class="header-wrapper d-flex align-items-center justify-content-between">
 					<!--header-logo-->
 					<div class="header-logo">
-						<a href="index.html">团队名称</a>
+						<a href="index.html">合成生物学竞赛</a>
 					</div>
 					<!-- menu-bar -->
 					<div class="menu-bar">
