团队team更改名称

--- a/Team.html
+++ b/Team.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>团队名称</title>
+		<title>团队 Team</title>
 		<link rel="icon" href="assets/img/favicon.ico" type="image/gif" sizes="16x16">
 		<link rel="stylesheet" href="assets/css/base-style.css">
 		<link rel="stylesheet" href="assets/css/style.css">
@@ -22,7 +22,7 @@
 				<div class="header-wrapper d-flex align-items-center justify-content-between">
 					<!--header-logo-->
 					<div class="header-logo">
-						<a href="index.html">团队名称</a>
+						<a href="index.html">合成生物学竞赛</a>
 					</div>
 					<!-- menu-bar -->
 					<div class="menu-bar">
@@ -139,7 +139,7 @@
 		<section class="author-banner-area">
 			<div class="container">
 				<div class="author-content text-center">
-					<h1>团队名称</h1>
+					<h1>B409_G.O.A.T</h1>
 					<p>团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1</p>
 				</div>
 			</div>
