--- a/Design.html
+++ b/Design.html
@@ -12,11 +12,11 @@
 		<script src="assets/js/dark-light.js"></script>
 	</head>
 	<body class="placeholder">
-		<div class="loader-wrapper">
+		<!-- <div class="loader-wrapper">
 			<div class="count"></div>
 			<div class="loader"></div>
 			<div class="loader2"></div>
-		</div>
+		</div> -->
 		<!-- header area start from here-->
 		<header class="header-area ">
 			<div class="container">
@@ -143,7 +143,7 @@
 					<div class="col-lg-8 m-auto">
 						<div class="single-blog-banner-wrapper">
 							<h1>实验设计</h1>
-							<p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字
+							<!-- <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字 -->
 							</p>
 							<div class="single-blog-social d-flex align-items-center justify-content-between">
 								<div class="published-dtls-area d-flex align-items-center">
