--- a/Protocol.html
+++ b/Protocol.html
@@ -8,14 +8,15 @@
 		<link rel="icon" href="assets/img/favicon.ico" type="image/gif" sizes="16x16">
 		<link rel="stylesheet" href="assets/css/base-style.css">
 		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/all.css"/>
 		<script src="assets/js/dark-light.js"></script>
 	</head>
 	<body class="placeholder">
-		<div class="loader-wrapper">
+		<!-- <div class="loader-wrapper">
 			<div class="count"></div>
 			<div class="loader"></div>
 			<div class="loader2"></div>
-		</div>
+		</div> -->
 		<!-- header area start from here-->
 		<header class="header-area ">
 			<div class="container">
@@ -99,7 +100,7 @@
 										<div class="search-title">
 											<h4>实验方案<span>2022.1.29</span></h4>
 										</div>
-										<p>文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2 </p>
+										<!-- <p>文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2 </p> -->
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
 								</a>
@@ -142,7 +143,7 @@
 					<div class="col-lg-8 m-auto">
 						<div class="single-blog-banner-wrapper">
 							<h1>实验方案</h1>
-							<p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字
+							<!-- <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字 -->
 							</p>
 							<div class="single-blog-social d-flex align-items-center justify-content-between">
 								<div class="published-dtls-area d-flex align-items-center">
@@ -293,37 +294,19 @@
 		        </div>
 		    </div>
 		</section> -->
-		<footer class="footer-area">
-			<!-- <div class="footer-top-area"> -->
-				<div class="container">
-					<!-- <div class="footer-top-wrapper d-flex justify-content-between"> -->
-						<!-- menu-bar -->
-						<div align="center" class="contact-area" style="text-align: center;">
-						    <h4 style="text-align: center;">联系我们</h4>
-						    <div class="contact-address">
-						        <a href="#" style="color: #000000;">邮箱：598666122@qq.com</a><br />
-								<a href="#" style="color: #000000;">湖北大学：湖北省武汉市友谊大道368号</a><br>
-								<p>Copyright © 2022 团队名称 All Rights Reserved.</p>
-						    </div>
-						</div>
-					<!-- </div> -->
-				</div>
-			<!-- </div> -->
-			<!-- <div class="footer-bottom">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6" style="text-align: center;">
-							<p>Copyright © 2022 团队名称 All Rights Reserved.</p>
-						</div>
-						<div class="col-lg-6">
-							<ul class="footer-privacy-card">
-								<li><a href="#">服务条款</a></li>
-								<li><a href="#">隐私政策</a></li>
-							</ul>
+		<!-- 页脚的联系方式 -->
+		<footer>
+			<section id="copyright" class="dark_section">
+				<div class="foot_container">
+					<div class="row2">
+						<div class="msg">
+							<img id='img-logo' src="static/picture/title-logo.png" >
+							<p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+							<p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
 						</div>
 					</div>
 				</div>
-			</div> -->
+			</section>
 		</footer>
 		<!-- Jquery -->
 		<script src="assets/js/default-js/jquery-3.3.1.min.js"></script>
