--- a/Team.html
+++ b/Team.html
@@ -7,15 +7,16 @@
 		<title>团队 Team</title>
 		<link rel="icon" href="assets/img/favicon.ico" type="image/gif" sizes="16x16">
 		<link rel="stylesheet" href="assets/css/base-style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/all.css"/>
 		<link rel="stylesheet" href="assets/css/style.css">
 		<script src="assets/js/dark-light.js"></script>
 	</head>
 	<body class="placeholder">
-		<div class="loader-wrapper">
+		<!-- <div class="loader-wrapper">
 			<div class="count"></div>
 			<div class="loader"></div>
 			<div class="loader2"></div>
-		</div>
+		</div> -->
 		<!-- header area start from here-->
 		<header class="header-area ">
 			<div class="container">
@@ -263,7 +264,7 @@
 							<div class="col-lg-6 mb-30">
 								<div class="author-single-card">
 									<div class="author-single-card-img">
-										<img src="assets/img/author/author-img3.jpg" alt="">
+										<img src="assets/img/author/ry.jpg" alt="">
 									</div>
 									<div class="author-single-card-content">
 										<h3><a href="#">荣誉</a></h3>
@@ -280,15 +281,15 @@
 							<div class="col-lg-6 mb-30">
 								<div class="author-single-card">
 									<div class="author-single-card-img">
-										<img src="assets/img/author/author-img4.jpg" alt="">
+										<img src="assets/img/author/yck.jpg" alt="">
 									</div>
 									<div class="author-single-card-content">
-										<h3><a href="#">成员4</a></h3>
-										<p>成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍</p>
+										<h3><a href="#">尹春蔻</a></h3>
+										<p>湖北大学生命科学学院本科三年级的尹春蔻。闲暇时喜欢看书旅行。参加合成生物学竞赛培养了我严谨实验，及时总结的科研态度，也让我对合成生物学，建模等有了更多的认识。在团队中，我主要参与实验部分</p>
 										<div class="author-social">
 											<div class="author-location">
 												<img src="assets/img/svg/location.svg" alt="">
-												<a href="">专业4</a>
+												<a href="">生物科学</a>
 											</div>
 										</div>
 									</div>
@@ -379,35 +380,19 @@
 				</div>
 			</div>
 		</section>
-		<footer class="footer-area">
-			<div class="footer-top-area">
-				<div class="container">
-					<!-- menu-bar -->
-					<div align="center" class="contact-area">
-						<h4>联系我们</h4>
-						<div class="contact-address">
-							<a href="#">邮箱：598666122@qq.com</a>
-							<a href="#">湖北大学：湖北省武汉市友谊大道368号</a>
+		<!-- 页脚的联系方式 -->
+		<footer>
+			<section id="copyright" class="dark_section">
+				<div class="foot_container">
+					<div class="row2">
+						<div class="msg">
+							<img id='img-logo' src="static/picture/title-logo.png" >
+							<p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+							<p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
 						</div>
 					</div>
 				</div>
-			</div>
-			</div>
-			<div class="footer-bottom">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6">
-							<p>Copyright © 2022 团队名称 All Rights Reserved.</p>
-						</div>
-						<div class="col-lg-6">
-							<ul class="footer-privacy-card">
-								<li><a href="#">服务条款</a></li>
-								<li><a href="#">隐私政策</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
+			</section>
 		</footer>
 		<!-- Jquery -->
 		<script src="assets/js/default-js/jquery-3.3.1.min.js"></script>
