--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<script src="assets/js/dark-light.js"></script>
 	</head>
 	<body class="placeholder">
-		<div class="loader-wrapper">
+		<!-- <div class="loader-wrapper">
 			<div class="count"></div>
 			<div class="loader"></div>
 			<div class="loader2"></div>
-		</div>
+		</div> -->
 		<!-- header area start from here-->
 		<header class="header-area ">
 			<div class="container">
@@ -57,7 +57,7 @@
 							<li class="popup"><img src="assets/img/svg/search.svg" alt=""></li>
 							<li class="dark-light"><img src="assets/img/svg/dark-light.svg" alt=""></li>
 							<li>
-								<!--移动菜单图标-->
+								
 								<div class="menu-toggole">
 									<span class="menu-show comon-tab">
 										<img src="assets/img/svg/toggle.svg" alt="">
@@ -82,50 +82,18 @@
 					<div class="data-list-wrapper">
 						<ul class="data-list">
 							<li>
-								<a href="">
+								<a href="Background.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>文本1<span>2022.1.29</span></h4>
+											<h4>项目背景<span>2022.1.29</span></h4>
 										</div>
-										<p>文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1
+										<p>在1993年，Frances等人研究发现，将TaqDNA聚合酶的5'→3'核酸外切酶活性的结构域切除，得到了蛋白大小为61kDa的stofell片段，发现得到的StofellTaqDNA聚合酶的耐热性明显得到了...
 										</p>
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
 								</a>
 							</li>
-							<li>
-								<a href="">
-									<div class="search-content">
-										<div class="search-title">
-											<h4>文本2<span>2022.1.29</span></h4>
-										</div>
-										<p>文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2 </p>
-									</div>
-									<img src="assets/img/svg/arrow-left.svg" alt="">
-								</a>
-							</li>
-							<li>
-								<a href="">
-									<div class="search-content">
-										<div class="search-title">
-											<h4>文本3<span>2022.1.29</span></h4>
-										</div>
-										<p>文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3 </p>
-									</div>
-									<img src="assets/img/svg/arrow-left.svg" alt="">
-								</a>
-							</li>
-							<li>
-								<a href="">
-									<div class="search-content">
-										<div class="search-title">
-											<h4>文本4<span>2022.1.29</span></h4>
-										</div>
-										<p>文本4文本4 </p>
-									</div>
-									<img src="assets/img/svg/arrow-left.svg" alt="">
-								</a>
-							</li>
+							
 
 						</ul>
 					</div>
@@ -142,47 +110,47 @@
 					data-carousel-mousedrag="true" data-carousel-items="1" data-carousel-nav="false">
 					<div class="banner-single-wrapper">
 						<div class="banner-img-area">
-							<h4>文本21</h4>
+							<!-- <h4>文本21</h4> -->
 							<div class="banner-img">
 								<img src="assets/img/homepage/001.jpg" alt="">
 							</div>
 						</div>
 						<div class="banner-content-area">
-							<h5>文本22</h5>
-							<h1><a href="#">文本23文本23</a></h1>
-							<h4 class="date"><span>2022.1.28</span> -团队</h4>
-							<p>文本24文本24</p>
-							<button class="btn btn-sm btn-radious-6 btn-black">查看更多</button>
+							<h5>Team</h5>
+							<h1><a href="Team.html">团队介绍</a></h1>
+							<h4 class="date"><span>2022.1.28</span> -B409_G.O.A.T</h4>
+							<!-- <p>文本24文本24</p> -->
+							<a href="Team.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a>
 						</div>
 					</div>
 					<div class="banner-single-wrapper">
 						<div class="banner-img-area">
-							<h4>文本31</h4>
+							<!-- <h4>文本31</h4> -->
 							<div class="banner-img">
-								<img src="assets/img/homepage/banner-image2.jpg" alt="">
+								<img src="assets/img/homepage/002.jpg" alt="">
 							</div>
 						</div>
 						<div class="banner-content-area">
-							<h5>文本32</h5>
-							<h1><a href="#">文本33文本33</a></h1>
-							<h4 class="date"><span>2022.1.28</span> -团队</h4>
-							<p>文本34文本34</p>
-							<button class="btn btn-sm btn-radious-6 btn-black">查看更多</button>
+							<h5>Collaboration</h5>
+							<h1><a href="Collaboration.html">团队合作</a></h1>
+							<h4 class="date"><span>2022.1.28</span> -B409_G.O.A.T</h4>
+							<!-- <p>文本34文本34</p> -->
+							<a href="Collaboration.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a>
 						</div>
 					</div>
 					<div class="banner-single-wrapper">
 						<div class="banner-img-area">
-							<h4>文本41</h4>
+							<!-- <h4>文本41</h4> -->
 							<div class="banner-img">
-								<img src="assets/img/homepage/banner-image3.jpg" alt="">
+								<img src="assets/img/homepage/003.jpg" alt="">
 							</div>
 						</div>
 						<div class="banner-content-area">
-							<h5>文本42</h5>
-							<h1><a href="#">文本43文本43</a></h1>
-							<h4 class="date"><span>2022.1.28</span> -团队</h4>
-							<p>文本44文本44</p>
-							<button class="btn btn-sm btn-radious-6 btn-black">查看更多</button>
+							<h5>Conclusion</h5>
+							<h1><a href="Conclusion.html">实验结论</a></h1>
+							<h4 class="date"><span>2022.1.28</span> -B409_G.O.A.T</h4>
+							<!-- <p>文本44文本44</p> -->
+							<a href="Conclusion.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a>
 						</div>
 					</div>
 				</div>
@@ -199,24 +167,24 @@
 							<h4>01<span>ONE</span></h4>
 						</div>
 						<div class="spc-scc-content">
-							<h5>项目简要介绍</h5>
-							<h3><a href="single-blog.html">项目简要介绍1项目简要介绍1</a></h3>
-							<p>项目简要介绍2项目简要介绍2项目简要介绍2</p>
+							<h5>Background</h5>
+							<h3><a href="Background.html">项目背景</a></h3>
+							<p>在1993年，Frances等人研究发现，将TaqDNA聚合酶的5'→3'核酸外切酶活性的结构域切除，得到了蛋白大小为...</p>
 						</div>
 					</div>
 				</div>
 				<div class="spc-single-card-wrapper">
 					<div class="spc-sc-img">
-						<a href="single-blog.html"><img src="assets/img/single-post/post2.jpg" alt=""></a>
+						<a href="Design.html"><img src="assets/img/single-post/post2.jpg" alt=""></a>
 					</div>
 					<div class="spc-sc-content-wrapper">
 						<div class="spc-scc-date">
 							<h4>02<span>TWO</span></h4>
 						</div>
 						<div class="spc-scc-content">
-							<h5>模型简要介绍</h5>
-							<h3><a href="single-blog.html">模型简要介绍1模型简要介绍1</a></h3>
-							<p>模型简要介绍2模型简要介绍2</p>
+							<h5>Design</h5>
+							<h3><a href="Design.html">项目设计</a></h3>
+							<p>本研究将Taq DNA聚合酶与双链DNA结合蛋白CL7融合，纯化CL7-Taq酶，以期增强酶与模板结合的能力，优化其...</p>
 						</div>
 					</div>
 				</div>
