更新部分样式

--- a/Background.html
+++ b/Background.html
@@ -142,7 +142,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 m-auto">
-						<div class="single-blog-banner-wrapper">
+						<div class="single-blog-banner-wrapper" style="padding: 100px 0 0;">
 							<h1>背景</h1>
 							<!-- <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字
 							</p> -->
@@ -155,7 +155,7 @@
 									<div class="published-person d-flex align-items-center">
 										<img class="icon-svg svg-orange mr-5" src="assets/img/svg/profile-user.svg"
 											alt="">
-										<p>作者</p>
+										<p>B409_G.O.A.T</p>
 									</div>
 								</div>
 							</div>
@@ -192,7 +192,7 @@
 							<h2>三:CE7的突变</h2>
 							<p>CL7 蛋白质是大肠杆菌来源的具有结合 DNA 能力的核酸酶，结构域的突变体。</p>
 							<p>在大肠杆菌自身免疫系统中,当外源DNA病毒攻击大肠杆菌细胞时,CE7核酸酶(Colicin E7 DNase)有利于消灭外源DNA。大肠杆菌外膜中的蛋白质与内膜蛋白质接触,在大肠杆菌内源的核酸内切酶与受体和转运蛋白质结合后,易位至易感细菌的细胞质中,通过细菌基因组的随机降解引发细胞死亡。在大肠杆菌自身免疫系统中,1m7(Immunity protein蛋白质与CE7核酸酶的IPE位点紧密结合抑制核酸内切酶活性,防止免疫系统攻击自身内源ACE核酸酶包括CE,CE7,cs和ce.含h-n-类型的结构域,核酸酶蛋白质大小为15kDam2能够抑制CE2 DNase活性,CE2-m复合物是大肠杆菌素 DNase--m蛋白质复合物,CE2 DNase具有混合的aB折叠,类似于CE7和CE9的未 DNase结合结构域,在结合1m蛋白质时会发生微小的结构变化,结合的1m2蛋白质含有四个a螺旋,具有特征性短螺旋,并且非常类似于游离m2的溶液结构6×his标签纯化1m2蛋白质有利于结晶并稳定晶体结构。</p>
-							<img src="assets/img/Bio_img/background3.jpg" >
+							<img src="assets/img/Bio_img/background3.jpg" style="width: 80%;">
 							<p> 研究大肠杆菌 CE DNase与m免疫蛋白质的相互作用,图1.2(a)展示与大肠杆菌素 DNase结合的1m蛋白质的螺旋异构体分布,证明了m蛋白质与大肠杆菌 DNase结合时可采用的不同螺旋异构状态图1.2(b)模拟大肠杆菌 CE DNasePE和1m蛋白质的主要作用方式E 22 DNase由2掩埋的螺旋Ⅱ和Ⅲ的重叠包括相邻的环1和Ⅱ,已经测定了六种m蛋白质结合复合物的结构1m蛋白质和CE核酸酶复合物如图1.3所示,在1m蛋白质与CE核酸酶的复合物中部分重叠在 CE DNase中,CE9和C7的PE的表面展示显示被其各自的同源m蛋白质掩埋并根据序列保守着色的区域复合物结构下方显示了四种 CE DNase的IPE连续30个残基序列比对, 其颜色对应构象中的颜色。</p>
 							<img src="assets/img/Bio_img/background2.jpg" >
 							<p>美国阿拉巴马大学的科学家基于细菌的免疫系统,研发出了一种新的蛋白质纯化技术。科学家们通过定点突变的方法对CE7蛋白质进行了改造,使得CE7蛋白质丧失了核酸酶活性,只保留结合dna的能力,得到突变体蛋白质CL7,其中CL7蛋白质与1m7蛋白质是目前已知的亲和力最强(Kd-10-10-M)的一对蛋白质。研究人员将1m7蛋白质被固定在琼脂糖珠子上,然后让融合CL7标签的目标蛋白质通过1m7纯化柱,利用Im7和C7极高的亲和力就可以高效吸附目标蛋白质,并保证极高的蛋白质纯度该纯化方法不仅操作简单,而且纯化效率高，蛋白质纯度好。同时，它还能协助治疗性蛋白质的大规模生产。另外，这种技术能够同时应用于真核蛋白质和原核蛋白质的纯化。</p>
