--- a/Design.html
+++ b/Design.html
@@ -141,7 +141,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 m-auto">
-						<div class="single-blog-banner-wrapper">
+						<div class="single-blog-banner-wrapper" style="padding: 100px 0 0;">
 							<h1>实验设计</h1>
 							<!-- <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字 -->
 							</p>
@@ -154,7 +154,7 @@
 									<div class="published-person d-flex align-items-center">
 										<img class="icon-svg svg-orange mr-5" src="assets/img/svg/profile-user.svg"
 											alt="">
-										<p>作者</p>
+										<p>B409_G.O.A.T</p>
 									</div>
 								</div>
 							</div>
