--- a/Protocol.html
+++ b/Protocol.html
@@ -141,7 +141,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 m-auto">
-						<div class="single-blog-banner-wrapper">
+						<div class="single-blog-banner-wrapper" style="padding: 100px 0 0;">
 							<h1>实验方案</h1>
 							<!-- <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字 -->
 							</p>
@@ -154,7 +154,7 @@
 									<div class="published-person d-flex align-items-center">
 										<img class="icon-svg svg-orange mr-5" src="assets/img/svg/profile-user.svg"
 											alt="">
-										<p>作者</p>
+										<p>B409_G.O.A.T</p>
 									</div>
 								</div>
 							</div>
@@ -193,12 +193,12 @@
 							<p class="title-content">1.用Sal I酶在 37℃下酶切 pET-30a 1h，用琼脂糖凝胶电泳检测质粒是否切完全，然后用胶回收试剂盒回收扩增的 DNA 片段和酶切后的载体，用核酸定量仪测定浓度；</p>
 							<p class="title-content">2.在冰水混合物上将片段和载体的摩尔数按照 3:1 的比例混匀后，然后加入一个酶活单位的 T5 核酸外切酶，在冰水混合物(4℃)酶切5 min；</p>
 							<p class="title-content">3.加入30-50μLDH5α感受态细胞混匀后在冰水混合物(4℃)放置30min，然后在42℃热激45s，加入150μLNZY在37℃摇床孵育45 min后均匀涂布在加有卡那抗生素的LB平板上，最后放入37℃培养箱中倒置培养12-15h；</p>
-							<p class="title-content">4. 挑取5-10个单菌落至含有 50μg/mL卡那霉素的LB液体培养基中，37℃摇床培养6-8h后，用菌液做PCR筛选阳性重组子，最后用质粒抽提试剂盒提取质粒 DNA 并送至生工生物公司测序部门测序。</p>
+							<p class="title-content">4.挑取5-10个单菌落至含有 50μg/mL卡那霉素的LB液体培养基中，37℃摇床培养6-8h后，用菌液做PCR筛选阳性重组子，最后用质粒抽提试剂盒提取质粒 DNA 并送至生工生物公司测序部门测序。</p>
 							
 							<h2>三、CL7-Taq 蛋白质的表达</h2>
-							<p class="title-content">1．将测序正确的 pET30a-Taq 和 pET30a-CL7-Taq 表达质粒分别转化至大肠杆菌BL21(DE3)感受态细胞中。</p>
+							<p class="title-content">1.将测序正确的 pET30a-Taq 和 pET30a-CL7-Taq 表达质粒分别转化至大肠杆菌BL21(DE3)感受态细胞中。</p>
 							<p>常规转化步骤：在2μL的质粒中加入30~50μL的感受态细胞，混匀后冰浴30min，之后在42℃水浴锅中热激45s；热激之后在冰上静置2min，再加入100μL的NZY，在37℃摇床中培养1h；培养完成后在超净工作台上进行平板涂布操作，最后将平板倒置于37℃培养箱中过夜培养。</p>
-							<p class="title-content">2．观察过夜培养的平板中单菌落的生长情况，挑取多个单菌落，并接种到含有70μL卡那霉素的200 mLLB液体培养基中，然后置于37℃恒温摇床中震荡培养；</p>
+							<p class="title-content">2.观察过夜培养的平板中单菌落的生长情况，挑取多个单菌落，并接种到含有70μL卡那霉素的200 mLLB液体培养基中，然后置于37℃恒温摇床中震荡培养；</p>
 							<p class="title-content">3.待OD值达到0.6时，加入200μL IPTG诱导Taq DNA聚合酶的表达，然后置于18℃摇床中培养16-18h左右；</p>
 							<p class="title-content">4.最后用低温超速离心机在 7000 rpm/min 离心 5 min 收集菌体。</p>
 							
