--- a/Team.html
+++ b/Team.html
@@ -298,15 +298,15 @@
 							<div class="col-lg-6 mb-lg-30">
 								<div class="author-single-card">
 									<div class="author-single-card-img">
-										<img src="assets/img/author/author-img5.jpg" alt="">
+										<img src="assets/img/author/ldk.jpg" alt="">
 									</div>
 									<div class="author-single-card-content">
-										<h3><a href="#">成员5</a></h3>
-										<p>成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍</p>
+										<h3><a href="#">鲁登科</a></h3>
+										<p>湖北大学生命科学学院20生物技术的鲁登科。参加合成生物学竞赛让我感受到了科研的魅力，也学到了很多之前没有接触过的知识，我相信经过这次竞赛，自己以后会更加热爱科研</p>
 										<div class="author-social">
 											<div class="author-location">
 												<img src="assets/img/svg/location.svg" alt="">
-												<a href="">专业5</a>
+												<a href="">生物技术</a>
 											</div>
 										</div>
 									</div>
@@ -315,15 +315,15 @@
 							<div class="col-lg-6">
 								<div class="author-single-card">
 									<div class="author-single-card-img">
-										<img src="assets/img/author/author-img6.jpg" alt="">
+										<img src="assets/img/author/wyt.jpg" alt="">
 									</div>
 									<div class="author-single-card-content">
-										<h3><a href="#">成员6</a></h3>
-										<p>成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍成员介绍</p>
+										<h3><a href="#">吴雨桐</a></h3>
+										<p>湖北大学计算机与信息工程学院本科生。在队伍中主要担任网页设计与应用等与Wiki网站有关的内容</p>
 										<div class="author-social">
 											<div class="author-location">
 												<img src="assets/img/svg/location.svg" alt="">
-												<a href="">专业6</a>
+												<a href="">数据科学与大数据技术</a>
 											</div>
 										</div>
 									</div>
@@ -353,14 +353,16 @@
 			</div>
 		</div>
 		<!-- contact page banner from here-->
-		<section class="contact-banner-area">
+		<section class="contact-banner-area" style="width: 95%;text-align: center;margin: auto;margin-top: 80px;">
 			<div class="container">
-				<div class="banner-wrapper">
+				<div class="banner-wrapper" style="border-radius: 1.5625rem;">
 					<div class="row align-items-center">
 						<div class="col-md-6">
 							<div class="contact-banner-content">
 								<h1>联系我们</h1>
-								<p>如果您对本网站内容存在任何问题，欢迎您向我们提出宝贵的建议。</p>
+								<p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+								<p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
+								
 							</div>
 						</div>
 						<div class="col-md-6 mt-md-30">
@@ -380,20 +382,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- 页脚的联系方式 -->
-		<footer>
-			<section id="copyright" class="dark_section">
-				<div class="foot_container">
-					<div class="row2">
-						<div class="msg">
-							<img id='img-logo' src="static/picture/title-logo.png" >
-							<p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-							<p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
-						</div>
-					</div>
-				</div>
-			</section>
-		</footer>
+		
 		<!-- Jquery -->
 		<script src="assets/js/default-js/jquery-3.3.1.min.js"></script>
 		<script src="assets/js/default-js/jquery-migrate-1.4.1.min.js"></script>
