--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="assets/css/base-style.css">
 		<link rel="stylesheet" href="assets/css/style.css">
 		<script src="assets/js/dark-light.js"></script>
+		<link rel="stylesheet" type="text/css" href="assets/css/all.css"/>
 	</head>
 	<body class="placeholder">
 		<!-- <div class="loader-wrapper">
@@ -42,10 +43,6 @@
 								<ul class="dropdown">
 									<li><a href="Parts.html">元件 Parts</a></li>
 									<li><a href="Collaboration.html">合作 Collaboration</a></li>
-									<li><a href="Demo.html">演示 Demo（可选）</a></li>
-									<li><a href="Hardware.html">硬件 Hardware（可选）</a></li>
-									<li><a href="Software.html">软件 Software（可选）</a></li>
-									<li><a href="Notebook.html">笔记 Notebook（可选）</a></li>
 								</ul>
 							</li>
 							<li><a href="Team.html">团队 Team</a></li>
@@ -160,7 +157,7 @@
 			<div class="container">
 				<div class="spc-single-card-wrapper">
 					<div class="spc-sc-img">
-						<a href="single-blog.html"><img src="assets/img/single-post/post1.jpg" alt=""></a>
+						<a href="Background.html"><img src="assets/img/single-post/post1.jpg" alt=""></a>
 					</div>
 					<div class="spc-sc-content-wrapper">
 						<div class="spc-scc-date">
@@ -190,16 +187,16 @@
 				</div>
 				<div class="spc-single-card-wrapper">
 					<div class="spc-sc-img">
-						<a href="single-blog.html"><img src="assets/img/single-post/post3.jpg" alt=""></a>
+						<a href="Protocol.html"><img src="assets/img/single-post/post3.jpg" alt=""></a>
 					</div>
 					<div class="spc-sc-content-wrapper">
 						<div class="spc-scc-date">
 							<h4>03<span>THREE</span></h4>
 						</div>
 						<div class="spc-scc-content">
-							<h5>补充部分简要介绍</h5>
-							<h3><a href="single-blog.html">补充部分简要介绍1补充部分简要介绍1</a></h3>
-							<p>补充部分简要介绍2补充部分简要介绍2</p>
+							<h5>Protocol</h5>
+							<h3><a href="Protocol.html">项目方案</a></h3>
+							<p>一.构建CL-7 Taq酶表达质粒和Taq酶表达质粒；二、T5核酸酶介导的体外重组；三、CL7-Taq 蛋白质的表达...</p>
 						</div>
 					</div>
 				</div>
@@ -221,7 +218,7 @@
 			</div>
 		</div>
 		<!--subcribe section start here-->
-		<section class="subscribe-area ">
+		<section class="subscribe-area " style="padding-bottom: 0;">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 m-auto">
@@ -234,7 +231,7 @@
 										<p>如果对本网站内容存在任何问题，亦或是学术合作，请您联系：</p>
 										<p>【X先生】邮箱：598666122@qq.com</p>
 										<p>【Y女士】邮箱：598666122@qq.com</p>
-										<p>【湖北大学】湖北省武汉市友谊大道368号</p>
+										
 									</div>
 								</div>
 							</div>
@@ -243,22 +240,22 @@
 				</div>
 			</div>
 		</section>
-		<footer class="footer-area">
-			<div class="footer-bottom">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6">
-							<p>Copyright © 2022 团队名称 All Rights Reserved.</p>
-						</div>
-						<div class="col-lg-6">
-							<ul class="footer-privacy-card">
-								<li><a href="#">服务条款</a></li>
-								<li><a href="#">隐私政策</a></li>
-							</ul>
+		
+		<!-- 页脚的联系方式 -->
+		<footer>
+			<section id="copyright" class="dark_section">
+				<div class="foot_container">
+					<div class="row2">
+						<div class="msg">
+							<img id='img-logo' src="static/picture/title-logo.png" >
+							<!-- <p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p> -->
+							<p class="text-center">学校地址及信息：【湖北大学】湖北省武汉市友谊大道368号</p>
+							<!-- <br> -->
+							<p>Copyright © 2022 B409_G.O.A.T All Rights Reserved.</p>
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
 		</footer>
 		<!-- Jquery -->
 		<script src="assets/js/default-js/jquery-3.3.1.min.js"></script>
