更新部分样式

--- a/Background.html
+++ b/Background.html
@@ -24,6 +24,7 @@
 				<div class="header-wrapper d-flex align-items-center justify-content-between">
 					<!--header-logo-->
 					<div class="header-logo">
+						<img id='img-logo' src="static/picture/title-logo.png" style="width: 60px;padding-right: 10px;">
 						<a href="index.html">合成生物学竞赛</a>
 					</div>
 					<!-- menu-bar -->
@@ -84,51 +85,42 @@
 					<div class="data-list-wrapper">
 						<ul class="data-list">
 							<li>
-								<a href="">
+								<a href="Background.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>文本1<span>2022.1.29</span></h4>
+											<h4>项目背景<span>2022.1.29</span></h4>
 										</div>
-										<p>文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1
+										<p>在1993年，Frances等人研究发现，将TaqDNA聚合酶的5'→3'核酸外切酶活性的结构域切除，得到了蛋白大小为61kDa的stofell片段，发现得到的StofellTaqDNA聚合酶的耐热性明显得到了...
 										</p>
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
 								</a>
 							</li>
 							<li>
-								<a href="">
+								<a href="Design.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>文本2<span>2022.1.29</span></h4>
+											<h4>项目设计<span>2022.1.29</span></h4>
 										</div>
-										<p>文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2 </p>
+										<p>本研究将Taq DNA聚合酶与双链DNA结合蛋白CL7融合，纯化CL7-Taq酶，以期增强酶与模板结合的能力，优化其酶学性质。并设计CL7-Taq酶作用下的最优PCR反应体系，扩大其应用范围...
+										</p>
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
 								</a>
 							</li>
 							<li>
-								<a href="">
+								<a href="Protocol.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>文本3<span>2022.1.29</span></h4>
+											<h4>项目方案<span>2022.1.29</span></h4>
 										</div>
-										<p>文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3 </p>
+										<p>在金开瑞生物公司合成编码来源于Thermus aquaticus YT-1的Taq酶基因序列（GenBank:P19821.1）和来源于大肠杆菌CE7突变体CL7的基因序列(GenBank:CP018986.1)；...
+										</p>
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
 								</a>
 							</li>
-							<li>
-								<a href="">
-									<div class="search-content">
-										<div class="search-title">
-											<h4>文本4<span>2022.1.29</span></h4>
-										</div>
-										<p>文本4文本4 </p>
-									</div>
-									<img src="assets/img/svg/arrow-left.svg" alt="">
-								</a>
-							</li>
-	
+						
 						</ul>
 					</div>
 				</div>
