--- a/Team.html
+++ b/Team.html
@@ -23,6 +23,7 @@
 				<div class="header-wrapper d-flex align-items-center justify-content-between">
 					<!--header-logo-->
 					<div class="header-logo">
+						<img id='img-logo' src="static/picture/title-logo.png" style="width: 60px;padding-right: 10px;">
 						<a href="index.html">合成生物学竞赛</a>
 					</div>
 					<!-- menu-bar -->
@@ -153,16 +154,18 @@
 			<div class="col-md-8 m-auto">
 				<div class="profile-area">
 					<div class="profile-img">
-						<img src="assets/img/single-blog/profile-img.jpg" alt="">
+						<img src="assets/img/author/ljw.jpg" alt="">
 					</div>
 					<div class="blog-profile-content">
-						<h3>名字</h3>
-						<p>介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍</p>
+						<h3>罗静雯</h3>
+						<p>博士，副教授，硕士生导师<br>电子邮箱：jwluo0227@163.com<br>研究方向：药剂学，靶向药物传递系统设计，缓控释给药系统研究</p>
+						<!-- 查看更多的按钮 -->
+						<a href="teacher.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="author-content text-center">
+		<!-- <div class="author-content text-center">
 			<br></br>
 			<h2>— — — — — — — — — — 副PI（可选）  — — — — — — — — — —</h2>
 			<br></br>
@@ -215,7 +218,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- author card area start from here-->
 		<div class="author-card-wrapper">
 			<div class="container">
@@ -223,7 +226,7 @@
 					<div class="col-md-10 m-auto">
 						<div class="author-content text-center">
 							<br></br>
-							<h2>— — — — — — — — — 学生队员  — — — — — — — — —</h2>
+							<h2>— — — — — — — — — 学生队员 — — — — — — — — —</h2>
 							<br></br>
 						</div>
 						<div class="row">
@@ -334,7 +337,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="author-content text-center">
+		<!-- <div class="author-content text-center">
 			<br></br>
 			<h2>— — — — — — — — — — 顾问 — — — — — — — — — —</h2>
 			<br></br>
@@ -351,7 +354,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- contact page banner from here-->
 		<section class="contact-banner-area" style="width: 95%;text-align: center;margin: auto;margin-top: 80px;">
 			<div class="container">
