--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<div class="header-wrapper d-flex align-items-center justify-content-between">
 					<!--header-logo-->
 					<div class="header-logo">
+						<img id='img-logo' src="static/picture/title-logo.png" style="width: 60px;padding-right: 10px;">
 						<a href="index.html">合成生物学竞赛</a>
 					</div>
 					<!-- menu-bar -->
@@ -90,7 +91,30 @@
 									<img src="assets/img/svg/arrow-left.svg" alt="">
 								</a>
 							</li>
-							
+							<li>
+								<a href="Design.html">
+									<div class="search-content">
+										<div class="search-title">
+											<h4>项目设计<span>2022.1.29</span></h4>
+										</div>
+										<p>本研究将Taq DNA聚合酶与双链DNA结合蛋白CL7融合，纯化CL7-Taq酶，以期增强酶与模板结合的能力，优化其酶学性质。并设计CL7-Taq酶作用下的最优PCR反应体系，扩大其应用范围...
+										</p>
+									</div>
+									<img src="assets/img/svg/arrow-left.svg" alt="">
+								</a>
+							</li>
+							<li>
+								<a href="Protocol.html">
+									<div class="search-content">
+										<div class="search-title">
+											<h4>项目方案<span>2022.1.29</span></h4>
+										</div>
+										<p>在金开瑞生物公司合成编码来源于Thermus aquaticus YT-1的Taq酶基因序列（GenBank:P19821.1）和来源于大肠杆菌CE7突变体CL7的基因序列(GenBank:CP018986.1)；...
+										</p>
+									</div>
+									<img src="assets/img/svg/arrow-left.svg" alt="">
+								</a>
+							</li>
 
 						</ul>
 					</div>
@@ -247,7 +271,7 @@
 				<div class="foot_container">
 					<div class="row2">
 						<div class="msg">
-							<img id='img-logo' src="static/picture/title-logo.png" >
+							<img id='img-logo' src="static/picture/logo_b.jpg" style="width: 100px;padding: 0;margin: 0;">
 							<!-- <p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p> -->
 							<p class="text-center">学校地址及信息：【湖北大学】湖北省武汉市友谊大道368号</p>
 							<!-- <br> -->
