--- a/Protocol.html
+++ b/Protocol.html
@@ -296,14 +296,17 @@
 		    </div>
 		</section> -->
 		<!-- 页脚的联系方式 -->
+		<!-- 页脚的联系方式 -->
 		<footer>
 			<section id="copyright" class="dark_section">
 				<div class="foot_container">
 					<div class="row2">
 						<div class="msg">
-							<img id='img-logo' src="static/picture/title-logo.png" >
-							<p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-							<p class="text-center">学校地址及信息：xxxxxxxxxxxxxxxxxxxxxx</p>
+							<img id='img-logo' src="static/picture/logo_b.jpg" style="width: 100px;padding: 0;margin: 0;">
+							<p class="text-center">团队联系方式：1350068839@qq.com</p>
+							<p class="text-center">学校地址及信息：【湖北大学】湖北省武汉市友谊大道368号</p>
+							<!-- <br> -->
+							<p>Copyright © 2022 B409_G.O.A.T All Rights Reserved.</p>
 						</div>
 					</div>
 				</div>
